<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<include layout="@layout/activity_title"/>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center|top"
        android:paddingTop="35dp" >
        
	    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:background="@drawable/shurukuang"
            android:orientation="horizontal" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/num"
                android:textColor="#4F4F4F"
                android:textSize="18sp" />
            
            <EditText
	            android:id="@+id/et_register_user"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginLeft="10dp"
	            android:background="@null"
	            android:hint="@string/tv_phone2"
	            android:inputType="phone"
	            android:textSize="16sp" />
        </LinearLayout>
        
	    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/shurukuang"
            android:orientation="horizontal" >
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:src="@drawable/pswd" />
            
            <EditText
	            android:id="@+id/et_register_pswd"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:background="@null"
	            android:layout_marginLeft="14dp"
	            android:hint="@string/tv_pswd2"
	            android:inputType="textPassword"
	            android:textSize="16sp" />
        </LinearLayout>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:text="@string/zhuce_hint"
	        android:textColor="#ffb0b0b0"
	        android:textSize="12sp" />
	    
	    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_yzm"
                android:textColor="#4F4F4F"
                android:textSize="18sp" />
            
            <EditText
	            android:id="@+id/et_register_yzm"
	            android:layout_width="145dp"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:background="@null"
	            android:drawableBottom="@drawable/hengxian"
	            android:textSize="18sp" />
            
            <TextView
                android:id="@+id/tv_getyzm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/get"
                android:textColor="#5CACEE"
                android:textSize="16sp" />
        </LinearLayout>
	    
	    <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/zhuc1"
            android:text="@string/register"
            android:textColor="#2966a3"
            android:textSize="18sp" />
	</LinearLayout>
    
</LinearLayout>
