<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fubangty.FGISystem.deffend.activity.ToolActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/title_blue" >

        <ImageView
            android:id="@+id/iv_tool_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_tool"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_tool_norm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/orange"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:text="@string/tool_norm" />

        <TextView
            android:id="@+id/tv_tool_file"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/blue"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/tool_file" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_tool_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/green"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/tool_image" />

</LinearLayout>