<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_report_dialog"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_dialog_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/scene" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="@color/greylow" />

        <Button
            android:id="@+id/btn_dialog_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/meeting" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.01dp"
            android:background="@color/greylow" />

        <Button
            android:id="@+id/btn_dialog_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/inside_job" />
    </LinearLayout>

    

</RelativeLayout>