<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_blue" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/log_title"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_log_report"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/log_title_report"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/rg_log_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_log_reported"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:background="@drawable/log_report_background_selector"
            android:gravity="center"
            android:text="@string/log_rb_reported"
            android:textColor="@drawable/log_report_selector" />

        <RadioButton
            android:id="@+id/rb_log_unreport"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:background="@drawable/log_report_background_selector"
            android:text="@string/log_rb_unreport"
            android:textColor="@drawable/log_report_selector" />
    </RadioGroup>


    <ListView
        android:id="@+id/lv_log_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:listSelector="@color/title_blue"
        >
    </ListView>

    

</LinearLayout>